# Nidaryx

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  Makefile  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml
apps/api-gateway/app/: main.py
apps/demo-api/app/: main.py
apps/order-service/app/: main.py
apps/web-ui/: .dockerignore  Dockerfile  eslint.config.js  index.html  package.json  vercel.json
apps/web-ui/src/: App.tsx  main.tsx
docs/: architecture.md  demo-scenarios.md  development.md  project-status.md  security-remediation.md  showcase.md
docs/source/: AegisOps_Architecture_v2.docx  AegisOps_Implementation_Playbook.docx  AegisOps_PRD_v2.docx  AegisOps_TRD_v2.docx  CODING_AGENT_GUIDE.md  README.md  UI_DESIGN_AND_FRONTEND_AGENT_PROMPT.md
infrastructure/compose/: python-service.Dockerfile
observability/otel/: collector.yml
observability/prometheus/: prometheus.yml
runbooks/: controlled-demo-actions.json
scripts/: check_quality.sh  security_check.sh  start_demo.sh
services/anomaly-service/app/: main.py
services/feature-service/app/: main.py
services/incident-service/app/: main.py
services/intelligence-core/aegisops_intelligence/: anomaly.py  correlation.py  demo_data.py  features.py  memory.py  rca.py  recommendations.py  remediation.py  service_catalog.py
services/intelligence-core/nidaryx_intelligence/: anomaly.py  (+8 more)
tests/unit/: test_anomaly.py  test_api_gateway_remediation.py  test_contracts.py  test_correlation_rca.py  test_memory_recommendation.py  test_ops_state.py  test_remediation.py
(+28 files in other folders)
