[project]
name = "tracesentry"
version = "0.1.0"
description = "AI-assisted observability and incident-response platform for microservice environments."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "TraceSentry Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "motor>=3.5.0",
  "pymongo>=4.8.0",
  "prometheus-client>=0.20.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "python-json-logger>=2.0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-requests>=2.32.0"
]

[tool.setuptools.packages.find]
where = [
  "packages/contracts",
  "packages/common-python",
  "packages/telemetry-client",
  "services/intelligence-core"
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages", "services", "apps", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
namespace_packages = true
mypy_path = [
  "packages/contracts",
  "packages/common-python",
  "packages/telemetry-client",
  "services/intelligence-core"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = [
  "packages/contracts",
  "packages/common-python",
  "packages/telemetry-client",
  "services/intelligence-core"
]

